[package]
name = "uiu-auto-section-selection"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_ignored = "0.1.14"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
ua_generator = { git = "https://github.com/spider-rs/ua_generator.git", version = "0.5.32" }
